// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunicatorDialogButtons tests default renderer 1`] = `
<div
  className="CommunicatorDialogButtons__container"
>
  <div
    className="CommunicatorDialogButtons__searchButton"
  >
    <IconButton
      id="communicator-dialog-buttons-search-button"
      label="cboard.components.CommunicatorDialog.search"
      onClick={[Function]}
    >
      <pure(Search) />
    </IconButton>
  </div>
  <div
    className="CommunicatorDialogButtons__menu"
  >
    <IconButton
      id="communicator-dialog-buttons-menu-button"
      label="cboard.components.CommunicatorDialog.menu"
      onClick={[Function]}
    >
      <pure(MoreVert) />
    </IconButton>
    <WithStyles(Menu)
      anchorEl={null}
      id="communicator-dialog-buttons-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        ...
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </div>
</div>
`;

exports[`CommunicatorDialogButtons tests menu behavior 1`] = `
<div
  className="CommunicatorDialogButtons__container"
>
  <div
    className="CommunicatorDialogButtons__searchButton"
  >
    <IconButton
      id="communicator-dialog-buttons-search-button"
      label="cboard.components.CommunicatorDialog.search"
      onClick={[Function]}
    >
      <pure(Search) />
    </IconButton>
  </div>
  <div
    className="CommunicatorDialogButtons__menu"
  >
    <IconButton
      id="communicator-dialog-buttons-menu-button"
      label="cboard.components.CommunicatorDialog.menu"
      onClick={[Function]}
    >
      <pure(MoreVert) />
    </IconButton>
    <WithStyles(Menu)
      anchorEl={null}
      id="communicator-dialog-buttons-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        ...
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </div>
</div>
`;

exports[`CommunicatorDialogButtons tests menu behavior 2`] = `
<div
  className="CommunicatorDialogButtons__container"
>
  <div
    className="CommunicatorDialogButtons__searchButton"
  >
    <IconButton
      id="communicator-dialog-buttons-search-button"
      label="cboard.components.CommunicatorDialog.search"
      onClick={[Function]}
    >
      <pure(Search) />
    </IconButton>
  </div>
  <div
    className="CommunicatorDialogButtons__menu"
  >
    <IconButton
      id="communicator-dialog-buttons-menu-button"
      label="cboard.components.CommunicatorDialog.menu"
      onClick={[Function]}
    >
      <pure(MoreVert) />
    </IconButton>
    <WithStyles(Menu)
      anchorEl="someElement"
      id="communicator-dialog-buttons-menu"
      onClose={[Function]}
      open={true}
    >
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        ...
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </div>
</div>
`;

exports[`CommunicatorDialogButtons tests search behavior 1`] = `
<div
  className="CommunicatorDialogButtons__container"
>
  <div
    className="CommunicatorDialogButtons__searchButton"
  >
    <IconButton
      id="communicator-dialog-buttons-search-button"
      label="cboard.components.CommunicatorDialog.search"
      onClick={[Function]}
    >
      <pure(Search) />
    </IconButton>
  </div>
  <div
    className="CommunicatorDialogButtons__menu"
  >
    <IconButton
      id="communicator-dialog-buttons-menu-button"
      label="cboard.components.CommunicatorDialog.menu"
      onClick={[Function]}
    >
      <pure(MoreVert) />
    </IconButton>
    <WithStyles(Menu)
      anchorEl={null}
      id="communicator-dialog-buttons-menu"
      onClose={[Function]}
      open={false}
    >
      <WithStyles(MenuItem)
        onClick={[Function]}
      >
        ...
      </WithStyles(MenuItem)>
    </WithStyles(Menu)>
  </div>
</div>
`;
